--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,10 @@ li.active > a {
   display: block;
 }
 
+.navigation-item:focus-within .submenu {
+  display: block;
+}
+
 .submenu a {
   position: relative;
   display: block;
@@ -303,7 +307,8 @@ li.active > a {
   background-color: #d07058;
 }
 
-.submenu-item a:hover {
+.submenu-item a:hover,
+.submenu-item a:focus {
   background-color: #fbded7;
 }
 
@@ -389,6 +394,10 @@ li.active > a {
   display: block;
 }
 
+.search:focus-within .search-form {
+  display: block;
+}
+
 .search input {
   height: 44px;
   width: 311px;
@@ -450,6 +459,12 @@ li.active > a {
 }
 
 .login:hover .login-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.login:focus-within .login-form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -526,6 +541,12 @@ li.active > a {
 }
 
 .basket.active:hover .modal-basket {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.basket.active:focus-within .modal-basket {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -943,14 +964,42 @@ a.basket-btn:focus {
   transition: opacity 0.3s ease-in-out;
 }
 
-.catalog-item:hover {
+.catalog-item:hover,
+.catalog-item:focus,
+.catalog-item:focus-within {
+  z-index: 3;
+}
+
+.catalog-item:hover .catalog-item-btn {
+  visibility: visible;
+  opacity: 1;
   z-index: 3;
 }
 
 .catalog-item:hover::after,
-.catalog-item:hover .catalog-item-btn {
+.catalog-item:focus::after {
   visibility: visible;
   opacity: 1;
+  z-index: 1;
+}
+
+.catalog-item:focus-within::after {
+  visibility: visible;
+  opacity: 1;
+  z-index: 1;
+}
+
+.catalog-item:focus .catalog-item-btn,
+.catalog-item-btn:focus {
+  visibility: visible;
+  opacity: 1;
+  z-index: 3;
+}
+
+.catalog-item:focus-within .catalog-item-btn {
+  visibility: visible;
+  opacity: 1;
+  z-index: 3;
 }
 
 .catalog-item.hit::before {
@@ -1322,13 +1371,13 @@ a.contacts-info-btn:active {
 .modal-feedback {
   position: fixed;
   display: block;
-  top: 50%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  top: 221px;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  margin-left: -239px;
   padding: 16px 24px 27px;
-  width: 430px;
+  width: 478px;
   z-index: 11;
 
   color: #323232;
